# image-enhancement

./: .gitignore  CMakeLists.txt  Doxyfile  generateDocs.sh
src/: ImageEnhancer.cpp  ImageEnhancer.h  KernelImageConvolver.cpp  KernelImageConvolver.h  Utilities.cpp  Utilities.h  kernel.cpp  kernel.h  main.cpp
src/filters/: FilterInterface.h  FrequencyDomainFilter.cpp  FrequencyDomainFilter.h  GaussianFilter.cpp  GaussianFilter.h  GaussianSpatialFilter.cpp  GaussianSpatialFilter.h  HighPassFilter.cpp  HighPassFilter.h  LowPassFilter.cpp  LowPassFilter.h  LowPassFrequencyFilter.cpp  LowPassFrequencyFilter.h  LowPassSpatialFilter.cpp  LowPassSpatialFilter.h  MeanFilter.cpp  MeanFilter.h  MedianFilter.cpp  MedianFilter.h  MedianSpatialFilter.cpp  MedianSpatialFilter.h  SpatialDomainFilter.h
